crates/nargo_cli/tests/compile_failure/overflowing_shr/src/main.nr
fn main() {
    let x: u32 = 1 >> 32;
    dep::std::println(x);
}
